# Apex

./: .gitignore  Makefile  README.md  REMEDIATION_PLAN.md  pyproject.toml  requirements.txt
apex_runtime/: __init__.py  cognitive.py  config.py  core_models.py  errors.py  ethical_framework.py  health.py  llm_orchestrator.py  memory_guard.py  numerics.py  observability.py  proactive_intelligence.py  reactive.py  reflection.py  runtime.py  second_order_analysis.py  self_healing.py  strategy.py  why_engine.py
apex_runtime/tests/: test_foundation_integration.py
apex_runtime/tools/: __init__.py  core.py
apex_runtime/ui/: __init__.py  core_integration.py  panel_binding.py
configs/: config.yaml
docs/: APEX_BUILD_PLAN.md  APEX_v3_INSTRUCTION_SET.md  BUILD_PROGRESS.md  apex_gap_analysis.py
migrations/: 001_initial_schema.sql
scripts/: run_server.py  run_tests.py
src/apex_runtime/: __init__.py  analytical_debt.py  cognitive.py  config.py  continuous_learning.py  core_models.py  health_signals.py  memory_guard.py  observability.py  policy.py  proactive_intelligence.py  reflection.py  runtime.py  second_order_analysis.py  signal_handler.py  strategy.py  tools.py  why_engine.py
src/apex_runtime/agents/: __init__.py  base.py  executive.py  specialized.py
src/apex_runtime/data_registry/: __init__.py
src/apex_runtime/financial_risk/: __init__.py
src/apex_runtime/tools/: __init__.py  core.py
src/apex_runtime/ui/: canvas_engine.py  cli.py  jsonl_protocol.py  war_room.py
tests/: test_data_registry.py  test_financial_risk.py  test_runtime.py
